Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,6 @@ a{
         background-repeat: no-repeat;
         background-position: center;
         width: auto;
-        height: 100%;
+        height: auto;
     }
 }
